--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "devDependencies": {
     "json-server": "^0.17.4",
     "lite-server": "^2.6.1"
+  },
+  "dependencies": {
+    "jquery": "^3.7.1"
   }
 }
