--- a/package.json
+++ b/package.json
@@ -8,13 +8,19 @@
     "json": "json-server -p 5629 db/db.json"
   },
   "keywords": [],
-  "author": "",
+  "author": "champix56 <desorbaix@free.fr>",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.25.6",
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.4",
+    "@babel/preset-typescript": "^7.24.7",
     "json-server": "^0.17.4",
-    "lite-server": "^2.6.1"
+    "lite-server": "^2.6.1",
+    "typescript": "^5.6.2"
   },
   "dependencies": {
     "jquery": "^3.7.1"
-  }
+  },
+  "repository": "https://github.com/champix56/2024-09-10-jpg.git"
 }
