--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "watch": "babel src --out-dir lib --watch",
     "buildbabel": "babel src --out-dir src/lib",
     "build": "webpack --config webpack.config.js"
-
   },
   "keywords": [],
   "author": "champix56 <desorbaix@free.fr>",
@@ -19,8 +18,10 @@
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.4",
     "@babel/preset-typescript": "^7.24.7",
+    "css-loader": "^7.1.2",
     "json-server": "^0.17.4",
     "lite-server": "^2.6.1",
+    "style-loader": "^4.0.0",
     "typescript": "^5.6.2",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4"
