--- a/package.json
+++ b/package.json
@@ -1,20 +1,45 @@
 {
   "name": "2024-09-10-jpg",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "rtghrsthsrt",
+  "main": "main.js",
   "scripts": {
-    "start": "lite-server --baseDir=\"src\"",
-    "json": "json-server -p 5629 db/db.json"
+    "start": "electron-forge start",
+    "json": "json-server -p 5629 db/db.json",
+    "ts": "tsc",
+    "bbuild": "babel src --out-dir lib --watch",
+    "build": "webpack --config webpack.config.js",
+    "eclectron": "electron .",
+    "package": "electron-forge package",
+    "make": "electron-forge make",
+    "srv": "node ./server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "hfgds",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.25.6",
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.4",
+    "@babel/preset-typescript": "^7.24.7",
+    "@electron-forge/cli": "^7.4.0",
+    "@electron-forge/maker-deb": "^7.4.0",
+    "@electron-forge/maker-rpm": "^7.4.0",
+    "@electron-forge/maker-squirrel": "^7.4.0",
+    "@electron-forge/maker-zip": "^7.4.0",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.4.0",
+    "@electron-forge/plugin-fuses": "^7.4.0",
+    "@electron/fuses": "^1.8.0",
+    "electron": "^32.1.0",
     "json-server": "^0.17.4",
-    "lite-server": "^2.6.1"
+    "lite-server": "^2.6.1",
+    "typescript": "^5.6.2",
+    "webpack": "^5.94.0",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "electron-squirrel-startup": "^1.0.1",
+    "express": "^4.21.0",
     "jquery": "^3.7.1"
   }
 }
